fixed overflow bug on subtasks

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   font-family: "Inter", sans-serif;
   font-size: 16px;
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
 
 body {
