--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -24,10 +24,6 @@
   z-index: 99;
 }
 
-.close-button {
-  
-}
-
 .close-button:hover {
   background: #d9d9d9;
   border-radius: 56px;
@@ -135,6 +131,11 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  width: 100%;
+}
+
+.subtasks-text {
+  width: 90%;
 }
 
 .board-task-dialog-subtasks-list-element {
@@ -143,6 +144,7 @@
   gap: 16px;
   border-radius: 3px;
   cursor: pointer;
+  width: 100%;
 }
 
 .board-task-dialog-subtasks-list-element:hover {
